--- a/app/views/admin/organizations/_interest.html.erb
+++ b/app/views/admin/organizations/_interest.html.erb
@@ -3,10 +3,11 @@
   <div class="row">
     <div class="small-12 columns">
       <%= f.collection_check_boxes(:interest_ids, Interest.all, :id, :name) do |f| %>
-        <%= f.label class:"small-6 columns" do%>
+        <%= f.label class:"small-6 columns" do %>
           <%= f.check_box %> <span> <%= f.text %> </span>
-        <%end%>
+        <% end %>
       <% end %>
+      <%= form_field_errors(f, :interest_ids) %>
     </div>
   </div>
 </fieldset>
