--- a/app/views/admin/organizations/_represented_entities_fields.html.erb
+++ b/app/views/admin/organizations/_represented_entities_fields.html.erb
@@ -5,46 +5,55 @@
     <div class="small-6 columns">
       <%= f.label :identifier, t('backend.represented_entities.identifier') %>
       <%= f.text_field :identifier %>
+      <%= form_field_errors(f, :identifier) %>
     </div>
 
     <div class="small-6 columns">
       <%= f.label :name, t('backend.represented_entities.name') %>
       <%= f.text_field :name %>
+      <%= form_field_errors(f, :name) %>
     </div>
 
     <div class="small-6 columns">
       <%= f.label :first_surname, t('backend.represented_entities.first_surname') %>
       <%= f.text_field :first_surname %>
+      <%= form_field_errors(f, :first_surname) %>
     </div>
 
     <div class="small-6 columns">
       <%= f.label :second_surname, t('backend.represented_entities.second_surname') %>
       <%= f.text_field :second_surname %>
+      <%= form_field_errors(f, :second_surname) %>
     </div>
 
     <div class="small-12 columns">
       <%= f.label :from, t('backend.represented_entities.from') %>
       <%= f.date_field :from %>
+      <%= form_field_errors(f, :from) %>
     </div>
 
     <div class="small-6 columns">
       <%= f.label :fiscal_year, t('backend.represented_entities.fiscal_year') %>
       <%= f.number_field :fiscal_year %>
+      <%= form_field_errors(f, :fiscal_year) %>
     </div>
 
     <div class="small-6 columns">
       <%= f.label :range_fund, t('backend.represented_entities.range_founds') %>
       <%= f.select :range_fund, Organization.range_funds.keys.to_a %>
+      <%= form_field_errors(f, :range_fund) %>
     </div>
 
     <div class="small-12 columns">
       <%= f.label :subvention, t('backend.represented_entities.subvention') %>
       <%= f.check_box :subvention %> Si
+      <%= form_field_errors(f, :subvention) %>
     </div>
 
     <div class="small-12 columns">
       <%= f.label :contract, t('backend.represented_entities.contract') %>
       <%= f.check_box :contract %> Si
+      <%= form_field_errors(f, :contract) %>
     </div>
 
     <div class="small-12 columns">
