Fix back button destination page. Add spec to check it! Add oganization category presence validator and complete test_seeds to be valid.

--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -1,6 +1,6 @@
 <div class="row mb40">
   <div class="small-12 large-8 columns">
-    <%= link_to t('backend.back'), events_path , :class=> "button tiny radius" %>
+    <%= link_to t('backend.back'), organizations_path , class: "button tiny radius" %>
     <h2 class="post__title-big"><%= t('organizations.show.title') %></h2>
     <p><%= t('organizations.show.reference') %>: <strong><%= @organization.reference %></p>
   </div>
