--- a/app/views/admin/organizations/_legal_representant.html.erb
+++ b/app/views/admin/organizations/_legal_representant.html.erb
@@ -1,7 +1,7 @@
 <fieldset>
   <legend><%= t('backend.legal_representant.title_fieldset') %></legend>
   <div class="row">
-    <div id="nested-legal-representant">
+    <div id="nested-legal-representant-wrapper">
       <div class="small-12 columns">
         <%= f.fields_for :legal_representant do |legal_representant_builder| %>
           <%= render 'legal_representant_fields', f: legal_representant_builder %>
@@ -11,9 +11,9 @@
                                     id: "legal_representant_link",
                                     class: "button tiny radius info",
                                     data: {
-                                      association_insertion_node: "#nested-legal-representant",
+                                      association_insertion_node: "#nested-legal-representant-wrapper",
                                       association_insertion_method: "append"
-                                    } %>
+                                    } if @organization.legal_representant.blank? || @organization.legal_representant.new_record? %>                            
       </div>
     </div>
   </div>
