--- a/app/views/admin/organizations/index.html.erb
+++ b/app/views/admin/organizations/index.html.erb
@@ -3,7 +3,8 @@
   <%= link_to t('backend.new_company'), new_admin_organization_path, :class => "button radius warning right" if can? :create, Organization %>
 </h1>
 
-  <%= paginate @organizations %>
+<%= paginate @organizations %>
+
 <div class="row">
   <table class="event">
     <thead>
@@ -25,11 +26,20 @@
           <%= organization.name %>
         </td>
         <td class="right">
-          <%= link_to edit_admin_organization_path(organization), title: t('backend.edit') do %>
+          <%= link_to organization_path(organization),
+                      target: :blank,
+                      title: t('organizations.show.title') do %>
+            <i class="step fi-eye size-24"></i>
+          <% end %>
+
+          <%= link_to edit_admin_organization_path(organization),
+                      title: t('backend.edit') do %>
             <i class="step fi-page-edit size-24"></i>
           <% end if can? :edit, organization %>
 
-          <%= link_to admin_organization_path(organization), method: :delete, data: { confirm: t("backend.delete_confirm") }, title: t('backend.delete') do%>
+          <%= link_to admin_organization_path(organization), method: :delete,
+                      data: { confirm: t("backend.delete_confirm") },
+                      title: t('backend.delete') do %>
             <i class="step fi-page-delete size-24"></i>
           <% end if can? :destroy, organization %>
         </td>
