--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -15,6 +15,10 @@
                  keyword: params[:keyword] %>
     <% end %>
 
+    <div class="tools">
+      <%= export_link(current_url(format: :csv)) %>
+    </div>
+
     <div class="row">
       <div class="small-12 columns mb10">
         <p><strong class="result-l mb20"><%= oganizations_index_subtitle %></strong></p>
