Add Edit organization specs. Add Create organization missing specs.

--- a/app/views/admin/organizations/_data.html.erb
+++ b/app/views/admin/organizations/_data.html.erb
@@ -39,7 +39,7 @@
     <div class="small-12 columns">
       <%= f.label :web, t('backend.identifying_data.web') %>
       <%= f.text_field :web %>
-      <%= form_field_errors(f, :category_id) %>
+      <%= form_field_errors(f, :web) %>
     </div>
     <div class="small-4 columns">
       <%= f.label :address_type, t('backend.identifying_data.address_type') %>
