--- a/app/views/admin/organizations/index.html.erb
+++ b/app/views/admin/organizations/index.html.erb
@@ -21,7 +21,7 @@
     </tfoot>
     <tbody>
       <% @organizations.each do |organization| %>
-      <tr>
+      <tr id="<%= dom_id(organization) %>" >
         <td>
           <%= organization.name %>
         </td>
