Add invalid organization link.

--- a/app/views/admin/organizations/_form.html.erb
+++ b/app/views/admin/organizations/_form.html.erb
@@ -11,6 +11,5 @@
   <%= render 'agents', f:f %>
   <%= render 'terms', f:f %>
 
-  <%= submit_tag t('backend.save'), :class=> "button radius success right" %>
-
+  <%= submit_tag t('backend.save'), class: "button radius success right" %>
 <% end %>
