--- a/app/views/admin/organizations/index.html.erb
+++ b/app/views/admin/organizations/index.html.erb
@@ -37,11 +37,19 @@
             <i class="step fi-page-edit size-24"></i>
           <% end if can? :edit, organization %>
 
-          <%= link_to admin_organization_path(organization), method: :delete,
-                      data: { confirm: t("backend.delete_confirm") },
-                      title: t('backend.delete') do %>
-            <i class="step fi-page-delete size-24"></i>
-          <% end if can? :destroy, organization %>
+          <% if organization.invalidate %>
+            <%= link_to admin_organization_path(organization, organization: { :invalidate => false }), method: :put,
+                        data: {confirm: '¿Esta seguro que quiere validar la Organización?'},
+                        title: "Validar" do %>
+              <i class="step fi-page-add size-24"></i>
+            <% end if can? :destroy, organization %>
+          <% else %>
+            <%= link_to admin_organization_path(organization, organization: { :invalidate => true }), method: :put,
+                        data: {confirm: '¿Esta seguro que quiere invalidar la Organización?'},
+                        title: "Invalidar" do %>
+              <i class="step fi-page-delete size-24"></i>
+            <% end if can? :destroy, organization %>
+          <% end %>
         </td>
       </tr>
       <% end %>
