--- a/app/views/layouts/_admin_sidebar.html.erb
+++ b/app/views/layouts/_admin_sidebar.html.erb
@@ -32,7 +32,7 @@
     <% if current_user.admin? %>
     <li class="<%= active_menu('admin/questions') %>">
       <a href="<%= admin_questions_path %>">
-        <i class="fi-lightbulb size-18"> <%= t("backend.questions")%></i>
+        <i class="fi-lightbulb size-18"> <%= t("backend.faq.questions")%></i>
       </a>
     </li>
     <% end %>
