--- a/app/assets/stylesheets/faq.scss
+++ b/app/assets/stylesheets/faq.scss
@@ -1,3 +1,8 @@
 // Place all the styles related to the faq controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.faq_question {
+  font-weight: bold;
+  font-size: x-large;
+}
