--- a/app/views/admin/questions/index.html.erb
+++ b/app/views/admin/questions/index.html.erb
@@ -19,26 +19,8 @@
         <th class="right"><%= t('backend.faq.actions')%></th>
       </tr>
     </tfoot>
-    <tbody>
-      <% @questions.each do |question| %>
-      <tr>
-        <td>
-          <%= question.title %>
-        </td>
-        <td>
-          <%= question.position %>
-        </td>
-        <td class="right">
-          <%= link_to edit_admin_question_path(question), title: t('backend.edit') do %>
-            <i class="step fi-page-edit size-24"></i>
-          <% end if can? :edit, question %>
-
-          <%= link_to admin_question_path(question), method: :delete, data: { confirm: t("backend.delete_confirm") }, title: t('backend.delete') do%>
-            <i class="step fi-page-delete size-24"></i>
-          <% end if can? :destroy, question %>
-        </td>
-      </tr>
-      <% end %>
+    <tbody class="sortable" data-js-url="<%= admin_order_questions_path() %>">
+      <%= render 'questions', questions: @questions %>
     </tbody>
   </table>
 </div>
