--- a/app/views/admin/questions/new.html.erb
+++ b/app/views/admin/questions/new.html.erb
@@ -1,3 +1,3 @@
 <h1><%= t("backend.faq.new_question") %></h1>
-<%= link_to t('backend.back'), admin_organizations_path , :class=> "button tiny radius" %>
+<%= link_to t('backend.back'), admin_questions_path , :class=> "button tiny radius" %>
 <%= render "form" %>
