Remove unused :js into spec. Added dynamic id on click button new agent or new new_represented_entity. Fix some scpec.

--- a/app/views/admin/organizations/_represented_entities_fields.html.erb
+++ b/app/views/admin/organizations/_represented_entities_fields.html.erb
@@ -1,4 +1,5 @@
-<div id="<%= dom_id(f.object) %>" class="nested-fields">
+
+<div id="<%= dom_id(f.object) %>" class="nested-fields small-12 column">
   <div class="small-12">
     <%= f.hidden_field :id %>
 
@@ -58,7 +59,6 @@
 
     <div class="small-12 columns">
       <%= link_to_remove_association "Eliminar", f, class: "button tiny radius alert right" %>
-      <hr />
     </div>
 
   </div>
