--- a/app/assets/stylesheets/all.css.scss
+++ b/app/assets/stylesheets/all.css.scss
@@ -18,6 +18,7 @@ html {
 /**
  * Remove default margin.
  */
+
 body {
   margin: 0; }
 
@@ -7288,3 +7289,15 @@ select {
     background: #004A83;
     padding: 0;
   }
+
+#nested-agents,
+#nested-represented-entities{
+  .nested-fields {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+
+    &:nth-child(even){
+      background: #edeff0;
+    }
+  }
+}
