--- a/app/views/admin/organizations/_agents_fields.html.erb
+++ b/app/views/admin/organizations/_agents_fields.html.erb
@@ -1,4 +1,4 @@
-<div id="<%= dom_id(f.object) %>" class="nested-fields">
+<div id="<%= dom_id(f.object) %>" class="nested-fields small-12 column">
   <%= f.hidden_field :id %>
   <div class="small-6 columns">
     <%= f.label :identifier, t('backend.agents.identifier') %>
@@ -45,7 +45,5 @@
   <div class="small-12 columns">
     <small><%= t('backend.agents.only_fill_if_answer') %> </small>
     <%= link_to_remove_association "Eliminar", f, class: "button tiny radius alert right" %>
-    <hr />
   </div>
-
 </div>
