Added small-6 into search.

--- a/app/views/admin/organizations/_admin_search_form.html.erb
+++ b/app/views/admin/organizations/_admin_search_form.html.erb
@@ -1,15 +1,15 @@
-<div class="small-12 large-4 columns">
+<div class="small-12 large-12 columns">
   <p><%= t "organizations.description" %></p>
   <br>
 
   <%= form_tag admin_organizations_path, method: :get do %>
     <%= hidden_field_tag :order, params[:order] %>
-    <div class="mb20">
+    <div class="mb20 small-6">
       <%= text_field_tag :keyword, params[:keyword], placeholder: t('main.form.keyword') %>
     </div>
-    <div class="mb20">
-      <%= link_to t('main.form.reset'), admin_organizations_path, class: 'button secondary' %>
-      <%= submit_tag t('main.form.search'), class: 'button', name: nil %>
+    <div class="mb20 small-6">
+      <%= link_to t('main.form.reset'), admin_organizations_path, class: 'expanded tiny radius button secondary' %>
+      <%= submit_tag t('main.form.search'), class: 'button expanded tiny radius button secondary', name: nil %>
     </div>
   <% end %>
 </div>
