--- a/app/views/admin/organizations/index.html.erb
+++ b/app/views/admin/organizations/index.html.erb
@@ -1,13 +1,13 @@
-<%= render 'admin_search_form' %>
+
 <h1>
   <%= t('backend.companies') %> (<%= total_organizations %>)
   <%= link_to t('backend.new_company'), new_admin_organization_path, :class => "button radius warning right" if can? :create, Organization %>
 </h1>
-
+<%= render 'admin_search_form' %>
 <%= paginate @organizations.hits %>
 
 <div class="row">
-  <table class="event">
+  <table class="small-12">
     <thead>
       <tr>
         <th><%= t('backend.title')%></th>
