Added id to nested agents and represened entities via js. Remove tag id form html.

--- a/app/views/admin/organizations/_agents_fields.html.erb
+++ b/app/views/admin/organizations/_agents_fields.html.erb
@@ -1,4 +1,4 @@
-<div id="<%= dom_id(f.object) %>" class="nested-fields small-12 column">
+<div class="nested-fields small-12 column">
   <%= f.hidden_field :id %>
   <div class="small-6 columns">
     <%= f.label :identifier, t('backend.agents.identifier') %>
