--- a/app/views/admin/organizations/_represented_entities_fields.html.erb
+++ b/app/views/admin/organizations/_represented_entities_fields.html.erb
@@ -1,5 +1,5 @@
 
-<div id="<%= dom_id(f.object) %>" class="nested-fields small-12 column">
+<div class="nested-fields small-12 column">
   <div class="small-12">
     <%= f.hidden_field :id %>
 
