--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,18 +1,17 @@
-<div>
-  <%= link_to :back do %>
-      <span class="icon-angle-left"><%= t(:back) %></span>
-  <% end %>
-</div>
 <div class="row">
-  <div class="small-3 column">
+  <div class="small-2 column faq_sidebar">
+    <%= link_to t(:back), :back %>
+
     <% @questions.each do |question| %>
-      <div><%= question.title %></div>
+      <div><%= question.position %>. <%= question.title %></div>
     <% end %>
   </div>
-  <div class="small-9 column">
+  <div class="small-10 column faq_box">
+    <h1><%= t('backend.faq.questions') %></h1>
+
     <% @questions.each do |question| %>
       <div class="faq_question_container">
-        <div class="faq_question"><%= question.title %></div>
+        <h2 class="faq_question"><%= question.position %>. <%= question.title %></h2>
         <%= question.answer.html_safe %>
       </div>
     <% end %>
