--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -1,5 +1,6 @@
 <div class="row">
   <div class="small-12 columns">
+    <%= link_to t('backend.faq.questions'), faq_path, class: 'right' %>
     <h2 class="title-l"><%= t('main.title')%></h2>
   </div>
 </div>
