--- a/app/views/admin/organizations/_admin_search_form.html.erb
+++ b/app/views/admin/organizations/_admin_search_form.html.erb
@@ -1,15 +1,14 @@
-<div class="small-12 large-12 columns">
-  <p><%= t "organizations.description" %></p>
-  <br>
-
+<div class="row">
+  <br />
   <%= form_tag admin_organizations_path, method: :get do %>
     <%= hidden_field_tag :order, params[:order] %>
-    <div class="mb20 small-6">
+    <div class="small-6 medium-12 columns">
+      <%= label_tag(:search_title, t("organizations.description")) %>
       <%= text_field_tag :keyword, params[:keyword], placeholder: t('main.form.keyword') %>
     </div>
-    <div class="mb20 small-6">
+    <div class="columns text-right">
       <%= link_to t('main.form.reset'), admin_organizations_path, class: 'expanded tiny radius button secondary' %>
-      <%= submit_tag t('main.form.search'), class: 'button expanded tiny radius button secondary', name: nil %>
+      <%= submit_tag t('main.form.search'), class: 'button expanded tiny radius button', name: nil %>
     </div>
   <% end %>
 </div>
