Add missing specs. Add fullname on organization index. Fix organizations results count

--- a/app/views/admin/organizations/index.html.erb
+++ b/app/views/admin/organizations/index.html.erb
@@ -1,6 +1,6 @@
 
 <h1>
-  <%= t('backend.companies') %> (<%= total_organizations %>)
+  <%= t('backend.companies') %> (<%= @organizations.total %>)
   <%= link_to t('backend.new_company'), new_admin_organization_path, :class => "button radius warning right" if can? :create, Organization %>
 </h1>
 
@@ -26,7 +26,7 @@
       <% @paginated_organizations.each do |organization| %>
       <tr id="<%= dom_id(organization) %>" >
         <td>
-          <%= organization.name %>
+          <%= organization.fullname %>
         </td>
         <td class="right">
           <%= link_to organization_path(organization),
