Add some suggested fixes from codeclimate.

--- a/app/assets/stylesheets/faq.scss
+++ b/app/assets/stylesheets/faq.scss
@@ -3,18 +3,18 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .faq_box {
-  padding: 23px 12px 60px;
+  padding: 23px 12px 60px 0px;
   margin: 30px -14px;
 }
 
-.faq_question_container{
-  margin-bottom:30px;
+.faq_question_container {
+  margin-bottom: 30px;
 }
 
 .faq_question {
   font-weight: bold;
   font-size: x-large;
-  margin-bottom:10px;
+  margin-bottom: 10px;
 }
 
 div.faq_sidebar {
