issue 15, filter on organizations index (public) plus organizations created as lobbies by admin, changes on I18n and rubocop cleanup

--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -43,7 +43,7 @@
   </div>
 
   <div class="small-12 large-7 end columns">
-    <p><strong><%= t('organizations.show.user_name') %>: </strong> <%= @organization.user.name %></p>
+    <p><strong><%= t('organizations.show.user_name') %>: </strong> <%= @organization.user.name if @organization.user %></p>
   </div>
 </div>
 
