On click radiobutton Show/Hide lobby_activity.

--- a/app/assets/javascripts/events.js.erb
+++ b/app/assets/javascripts/events.js.erb
@@ -39,4 +39,11 @@ $(function(){
       }
   });
 
+  $("#event_lobby_activity_true").click(function(){
+    $("#lobby-activity-event").show();
+  });
+  $("#event_lobby_activity_false").click(function(){
+    $("#lobby-activity-event").hide();
+  });
+
 });
