--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -57,22 +57,23 @@
         <%= f.label :lobby_activity, "No", value: false %>
       </div>
 
-      <div id="lobby-activity-event">
+      <div id="lobby-activity-event" data-new-url="<%= organization_represented_entities_url_pattern(format: :json) %>">
 
           <%= text_field_tag "search-organization",
                               params[:search],
                               class: "search-query",
                               placeholder: "Buscar por nombre o identificador",
                               type: "search",
-                              data: {autocomplete: autocomplete_organization_name_admin_organizations_path} %>
-
+                              data: {autocomplete: autocomplete_organization_name_admin_organizations_path, update_elements: {}}%>
           <%= f.hidden_field :organization_id %>
 
           <%#= f.collection_check_boxes(:represented_entity_ids, Organization.first.represented_entities, :id, :name) do |f| %>
             <%#= f.label class:"small-6 columns" do %>
               <%#= f.check_box %> <span> <%#= f.text %> </span>
-            <%# #end %>
+            <%# end %>
           <%# end %>
+          <div id="yeah">
+          </div>
       </div>
 
     </fieldset>
