--- a/app/views/admin/organizations/index.html.erb
+++ b/app/views/admin/organizations/index.html.erb
@@ -1,7 +1,8 @@
-
 <h1>
   <%= t('backend.companies') %> (<%= @organizations.total %>)
-  <%= link_to t('backend.new_company'), new_admin_organization_path, :class => "button radius warning right" if can? :create, Organization %>
+  <%= link_to t('backend.new_company'),
+              new_admin_organization_path,
+              class: "button radius warning right" if can? :create, Organization %>
 </h1>
 
 <%= render 'admin_search_form' %>
@@ -40,7 +41,8 @@
             <i class="step fi-page-edit size-24"></i>
           <% end if can? :edit, organization %>
 
-          <%= link_to admin_organization_path(organization), method: :delete,
+          <%= link_to admin_organization_path(organization),
+                      method: :delete,
                       data: { confirm: t("backend.delete_confirm") },
                       title: t('backend.delete') do %>
             <i class="step fi-page-delete size-24"></i>
